--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "koa-route": "^3.2.0",
     "request": "^2.87.0",
     "request-promise-native": "^1.0.5",
-    "wicked-good-xpath": "^1.3.0",
-    "xregexp": "^4.1.1"
+    "wicked-good-xpath": "git+https://github.com/adomasven/wicked-good-xpath.git#master",
+    "xregexp": "^4.2.0"
   },
   "devDependencies": {},
   "scripts": {
