Replace zotero/zotero file copies with imports from a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "modules/translators"]
 	path = modules/translators
 	url = https://github.com/zotero/translators
+[submodule "modules/zotero"]
+	path = modules/zotero
+	url = https://github.com/zotero/zotero.git
