Update package.json with proper license and repository fields

--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "translation-server",
   "version": "0.0.1",
   "description": "Zotero translation server",
-  "license": "AGPLv3",
+  "license": "AGPL-3.0-only",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zotero/translation-server-v2"
+  },
   "dependencies": {
     "config": "^1.30.0",
     "jsdom": "^11.11.0",
