Update wgxpath library to fix more xpath matching issues. Closes #21

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "koa-route": "^3.2.0",
     "request": "^2.87.0",
     "request-promise-native": "^1.0.5",
-    "wicked-good-xpath": "git+https://github.com/adomasven/wicked-good-xpath.git#master",
+    "wicked-good-xpath": "git+https://github.com/adomasven/wicked-good-xpath.git#e84d65d",
     "xregexp": "^4.2.0"
   },
   "devDependencies": {},
