--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "url": "git+https://github.com/zotero/translation-server-v2"
   },
   "dependencies": {
-    "@harrison-ifeanyichukwu/xml-serializer": "^1.2.0",
     "config": "^1.30.0",
     "jsdom": "^11.11.0",
     "koa": "^2.5.1",
@@ -17,6 +16,7 @@
     "koa-route": "^3.2.0",
     "request": "^2.87.0",
     "request-promise-native": "^1.0.5",
+    "w3c-xmlserializer": "0.0.1",
     "wicked-good-xpath": "git+https://github.com/adomasven/wicked-good-xpath.git#e84d65d",
     "xregexp": "^4.2.0"
   },
