Add ca-certificates to apt packages
Most sites these days are HTTPS and in order to verify the certificates
we need the trusted CAs in the container. In the future this will
hopefully be happening via service mesh proxies but for now install
ca-certificates in the image

Bug: T197242
Change-Id: I55bb5a5528d0c1c8bf2f8112656551f7ffe16a92

--- a/.pipeline/blubber.yaml
+++ b/.pipeline/blubber.yaml
@@ -5,7 +5,7 @@ base: docker-registry.wikimedia.org/nodejs10-slim:0.0.1
 variants:
   build:
     base: docker-registry.wikimedia.org/nodejs10-devel:0.0.1
-    apt: { packages: [git] }
+    apt: { packages: [git, ca-certificates] }
     node:
       requirements: [package.json, package-lock.json]
 
