--- a/.pipeline/blubber.yaml
+++ b/.pipeline/blubber.yaml
@@ -5,7 +5,7 @@ base: docker-registry.wikimedia.org/nodejs10-slim:0.0.1
 variants:
   build:
     base: docker-registry.wikimedia.org/nodejs10-devel:0.0.1
-    apt: { packages: [git, ca-certificates] }
+    apt: { packages: [git] }
     node:
       requirements: [package.json, package-lock.json]
 
@@ -21,5 +21,6 @@ variants:
 
   production:
     copies: prep
+    apt: { packages: [ca-certificates] }
     node: { env: production }
     entrypoint: [node, src/server.js]
