Fix text search test
Fixes #60

--- a/package.json
+++ b/package.json
@@ -34,6 +34,6 @@
   "scripts": {
     "start": "node src/server.js",
     "start:debug": "node --inspect src/server.js",
-    "test": "NODE_ENV=test node_modules/.bin/mocha test/*_test.js"
+    "test": "NODE_ENV=test ALLOW_CONFIG_MUTATIONS=1 node_modules/.bin/mocha test/*_test.js"
   }
 }
