Update Zotero to 8b8355a
Squashed commit of the following:

commit 8b8355a7acf1fa3252141b108cc61c377679af19
Author: Dan Stillman <dstillman@zotero.org>
Date:   Thu Dec 13 02:18:45 2018 -0500

    Add local.json to .gitignore

commit 517e2644d9b5e5e3b0180599565effb4c3f5cb82
Author: Dan Stillman <dstillman@zotero.org>
Date:   Thu Dec 13 02:16:15 2018 -0500

    Fix CSL JSON export when there's an Extra value

    Fixes zotero/zotero#1604

commit 6160d8668812483b2ab7fc9f511c9996cb97abdb
Author: Dan Stillman <dstillman@zotero.org>
Date:   Wed Dec 12 23:38:25 2018 -0500

    Fix text search test

    Fixes #60

commit 802d3d80e75f410462d315c6d80b76e2b820da82
Author: Dan Stillman <dstillman@zotero.org>
Date:   Tue Dec 4 02:59:17 2018 -0700

    Update translators submodule

commit e763651060913654cb128138da14e347768d6804
Author: Dan Stillman <dstillman@zotero.org>
Date:   Tue Dec 4 02:55:32 2018 -0700

    Forward client Accept-Language header during web translation

    Addresses #16

commit 64644978d7d49ea147f1ac5f87fcbfda02eca470
Author: Dan Stillman <dstillman@zotero.org>
Date:   Sat Nov 17 02:39:08 2018 -0500

    Fix CSL JSON export

    Not sure if this didn't work after d1bc532a or something changed since,
    but this seems to work now.

    Fixes #56

commit e03e4f13cf408aa57d310ddb36eb913d5d863cbe
Author: Daniel Himmelstein <daniel.himmelstein@gmail.com>
Date:   Fri Nov 16 17:35:50 2018 -0500

    README installation: touch-up commands (#55)

    Use long arguments so new users know what they are doing.

    git clone: default behavior is to clone into `translation-server` directory.

commit 653a767b35bafe9dce7c8ba867f1db6c0cdb522b
Author: Dan Stillman <dstillman@zotero.org>
Date:   Fri Nov 16 17:16:02 2018 -0500

    Document proxy support

    Closes #54

commit aed6c83f4d60efda3c83dd249c1843bb03fc1058
Author: Martynas Bagdonas <martbgd@gmail.com>
Date:   Fri Nov 16 17:56:12 2018 +0800

    Use version from install.rdf (#53)

commit f3436f2965b61ae24fd4114462

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "translation-server",
-  "version": "0.0.1",
+  "version": "2.0.0",
   "description": "Zotero translation server",
   "license": "AGPL-3.0-only",
   "main": "index.js",
@@ -9,8 +9,10 @@
     "url": "git+https://github.com/zotero/translation-server-v2"
   },
   "dependencies": {
+    "aws-sdk": "^2.326.0",
+    "cheerio": "^1.0.0-rc.2",
     "config": "^1.30.0",
-    "jsdom": "^11.11.0",
+    "jsdom": "^13.0.0",
     "koa": "^2.5.1",
     "koa-bodyparser": "^4.2.1",
     "koa-route": "^3.2.0",
@@ -20,7 +22,8 @@
     "serverless-http": "^1.6.0",
     "w3c-xmlserializer": "0.0.1",
     "wicked-good-xpath": "git+https://github.com/adomasven/wicked-good-xpath.git#e84d65d",
-    "xregexp": "^4.2.0"
+    "xregexp": "^4.2.0",
+    "yargs": "^12.0.2"
   },
   "devDependencies": {
     "chai": "^4.1.2",
@@ -31,6 +34,6 @@
   "scripts": {
     "start": "node src/server.js",
     "start:debug": "node --inspect src/server.js",
-    "test": "NODE_ENV=test node_modules/.bin/mocha test/*_test.js"
+    "test": "NODE_ENV=test ALLOW_CONFIG_MUTATIONS=1 node_modules/.bin/mocha test/*_test.js"
   }
 }
