--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "aws-sdk": "^2.326.0",
     "config": "^1.30.0",
-    "jsdom": "git+https://github.com/jsdom/jsdom.git#172d587",
+    "jsdom": "git+https://github.com/zotero/jsdom.git#fdd33bd",
     "koa": "^2.5.1",
     "koa-bodyparser": "^4.2.1",
     "koa-route": "^3.2.0",
