Update config file pattern in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,5 @@ node_modules
 config/production.json
 config/dev.json
 config/local.json
-lambda_config-production.env
-lambda_config-dev.env
+lambda_config*.env
 
