Added NODE_V8_HEAP_SIZE_IN_MB env variable and made node honor it.
Updated: addressing nitpicks
Bug: T213414
Change-Id: Ic930b526722c79f916163c0fcd680cd121c2cded

--- a/.pipeline/blubber.yaml
+++ b/.pipeline/blubber.yaml
@@ -1,7 +1,6 @@
 ---
 version: v3
 base: docker-registry.wikimedia.org/nodejs10-slim:0.0.1
-
 variants:
   build:
     base: docker-registry.wikimedia.org/nodejs10-devel:0.0.1
@@ -20,7 +19,9 @@ variants:
     node: { env: production }
 
   production:
+    runs:
+      environment: { NODEJS_V8_HEAP_SIZE_IN_MB: "1700" }
     copies: prep
     apt: { packages: [ca-certificates] }
     node: { env: production }
-    entrypoint: [node, src/server.js]
+    entrypoint: [ /bin/bash , -c , "node --max-old-space-size=$NODEJS_V8_HEAP_SIZE_IN_MB src/server.js" ]
