--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
 		"yargs": "^12.0.2"
 	},
 	"devDependencies": {
+		"@zotero/eslint-config": "^1.0.2",
 		"chai": "^4.1.2",
+		"eslint": "^5.16.0",
 		"mocha": "^5.2.0",
 		"sinon": "^6.1.4",
 		"supertest": "^3.1.0"
