--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"aws-sdk": "^2.326.0",
 		"config": "^1.30.0",
+		"iconv-lite": "^0.4.24",
 		"jsdom": "^13.1.0",
 		"koa": "^2.5.1",
 		"koa-bodyparser": "^4.2.1",
