Use buster-nodejs10 images
Per T256877, stretch-backports is being killed from upstream Debian and
hence we need to migrated to buster and the support it offers us for
nodejs 10

Bug: T258158
Change-Id: Ib2ba96fc7559b62e53b63837eb8de1b2bf4a73f8

--- a/.pipeline/blubber.yaml
+++ b/.pipeline/blubber.yaml
@@ -1,9 +1,9 @@
 ---
 version: v4
-base: docker-registry.wikimedia.org/nodejs10-slim:0.0.1
+base: docker-registry.wikimedia.org/buster-nodejs10-slim:0.0.1
 variants:
   build:
-    base: docker-registry.wikimedia.org/nodejs10-devel:0.0.1
+    base: docker-registry.wikimedia.org/buster-nodejs10-devel:0.0.1
     copies: [local]
     apt: { packages: [git] }
     node:
