--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,9 +8,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       
-      - run: git submodule update --init --depth=1 modules/zotero
-      - run: git -C modules/zotero submodule update --init --depth=1 styles
-      - run: git -C modules/zotero submodule update --init --depth=1 chrome/content/zotero/locale/csl
+      - run: git submodule update --init --depth=1 modules/translate
+      - run: git submodule update --init --depth=1 modules/utilities
+      - run: git submodule update --init --depth=1 modules/zotero-schema
       - run: git submodule update --init --depth=1 modules/translators
       
       - name: Install Node
