--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,12 @@
 [submodule "modules/translators"]
 	path = modules/translators
 	url = https://github.com/zotero/translators
-[submodule "modules/zotero"]
-	path = modules/zotero
-	url = https://github.com/zotero/zotero.git
+[submodule "modules/utilities"]
+	path = modules/utilities
+	url = https://github.com/zotero/utilities.git
+[submodule "modules/translate"]
+	path = modules/translate
+	url = https://github.com/zotero/translate.git
+[submodule "modules/zotero-schema"]
+	path = modules/zotero-schema
+	url = https://github.com/zotero/zotero-schema.git
