--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
 		"request": "^2.87.0",
 		"request-promise-native": "^1.0.5",
 		"serverless-http": "^1.6.0",
-		"wicked-good-xpath": "git+https://github.com/zotero/wicked-good-xpath.git#1b88459",
+		"wicked-good-xpath": "git+https://git@github.com/zotero/wicked-good-xpath.git#1b88459",
 		"xregexp": "^4.2.0",
 		"yargs": "^12.0.2"
 	},
 	"devDependencies": {
 		"@zotero/eslint-config": "^1.0.2",
 		"chai": "^4.1.2",
-		"eslint": "7.16.0",
+		"eslint": "^5.16.0",
 		"mocha": "^5.2.0",
 		"sinon": "^6.1.4",
 		"supertest": "^3.1.0"
