Switch to WMF hosted fork
Switch to WMF hosted fork
of the translators submodule, and add
most recent version.

Bug: T336727
Change-Id: I29b07a56ec90acc39e56681de656093a02f27662

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "modules/translators"]
 	path = modules/translators
-	url = https://github.com/zotero/translators
+	url = https://gitlab.wikimedia.org/repos/mediawiki/services/zotero-translators.git
 [submodule "modules/utilities"]
 	path = modules/utilities
 	url = https://github.com/zotero/utilities.git
