--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       - run: git submodule update --init --depth=1 modules/zotero-schema
       - run: git submodule update --init --depth=1 modules/translators
       
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Install Node ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
