--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,10 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     timeout-minutes: 5
+    strategy:
+      matrix:
+        node-version: [18, 20]
+    
     steps:
       - uses: actions/checkout@v2
       
@@ -13,10 +17,10 @@ jobs:
       - run: git submodule update --init --depth=1 modules/zotero-schema
       - run: git submodule update --init --depth=1 modules/translators
       
-      - name: Install Node
+      - name: Install Node ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
-          node-version: 16
+          node-version: ${{ matrix.node-version }}
       
       - run: npm ci
       - run: npm test
