--- a/package.json
+++ b/package.json
@@ -9,23 +9,24 @@
 		"url": "git+https://github.com/zotero/translation-server-v2"
 	},
 	"dependencies": {
-		"aws-sdk": "^2.326.0",
-		"config": "^1.30.0",
+		"aws-sdk": "^2.1692.0",
+		"config": "^4.1.1",
 		"iconv-lite": "^0.4.24",
-		"jsdom": "^13.1.0",
-		"koa": "^2.13.4",
-		"koa-bodyparser": "^4.3.0",
+		"jsdom": "^27.2.0",
+		"koa": "^2.15.3",
+		"koa-bodyparser": "^4.4.1",
 		"koa-route": "^3.2.0",
-		"md5": "^2.2.1",
-		"request": "^2.87.0",
-		"request-promise-native": "^1.0.5",
+		"md5": "^2.3.0",
+		"request": "^2.88.2",
+		"request-promise-native": "^1.0.9",
 		"serverless-http": "^2.7.0",
+		"w3c-xmlserializer": "^5.0.0",
 		"wicked-good-xpath": "git+https://git@github.com/zotero/wicked-good-xpath.git#1b88459",
-		"xregexp": "^4.2.0",
+		"xregexp": "^5.1.2",
 		"yargs": "^12.0.2"
 	},
 	"devDependencies": {
-		"@zotero/eslint-config": "^1.0.2",
+		"@zotero/eslint-config": "^1.0.8",
 		"chai": "^4.1.2",
 		"eslint": "^5.16.0",
 		"mocha": "^5.2.0",
