--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
     timeout-minutes: 5
     strategy:
       matrix:
-        node-version: [18, 20, 22]
+        node-version: [20, 22, 24, 25]
     
     steps:
       - uses: actions/checkout@v2
